@@ -16,10 +16,7 @@
 
 package com.android.car.hal;
 
-import static com.android.car.CarServiceUtils.toByteArray;
-import static com.android.car.CarServiceUtils.toFloatArray;
-import static com.android.car.CarServiceUtils.toIntArray;
-import static com.android.car.CarServiceUtils.toLongArray;
+import static com.android.car.internal.ExcludeFromCodeCoverageGeneratedReport.BOILERPLATE_CODE;
 import static com.android.car.internal.ExcludeFromCodeCoverageGeneratedReport.DUMP_INFO;
 
 import static java.lang.Integer.toHexString;
@@ -27,42 +24,37 @@ import static java.lang.Integer.toHexString;
 import android.annotation.CheckResult;
 import android.annotation.Nullable;
 import android.car.VehiclePropertyIds;
-import android.car.hardware.property.CarPropertyManager;
+import android.car.builtin.util.Slogf;
 import android.content.Context;
-import android.hardware.automotive.vehicle.V2_0.IVehicle;
-import android.hardware.automotive.vehicle.V2_0.IVehicleCallback;
-import android.hardware.automotive.vehicle.V2_0.SubscribeFlags;
-import android.hardware.automotive.vehicle.V2_0.SubscribeOptions;
-import android.hardware.automotive.vehicle.V2_0.VehicleAreaConfig;
-import android.hardware.automotive.vehicle.V2_0.VehiclePropConfig;
-import android.hardware.automotive.vehicle.V2_0.VehiclePropValue;
-import android.hardware.automotive.vehicle.V2_0.VehicleProperty;
-import android.hardware.automotive.vehicle.V2_0.VehiclePropertyAccess;
-import android.hardware.automotive.vehicle.V2_0.VehiclePropertyChangeMode;
-import android.hardware.automotive.vehicle.V2_0.VehiclePropertyType;
+import android.hardware.automotive.vehicle.SubscribeOptions;
+import android.hardware.automotive.vehicle.VehiclePropError;
+import android.hardware.automotive.vehicle.VehicleProperty;
+import android.hardware.automotive.vehicle.VehiclePropertyAccess;
+import android.hardware.automotive.vehicle.VehiclePropertyChangeMode;
+import android.hardware.automotive.vehicle.VehiclePropertyStatus;
+import android.hardware.automotive.vehicle.VehiclePropertyType;
 import android.os.Handler;
 import android.os.HandlerThread;
 import android.os.RemoteException;
 import android.os.ServiceSpecificException;
 import android.os.SystemClock;
+import android.util.ArrayMap;
 import android.util.ArraySet;
-import android.util.Slog;
 import android.util.SparseArray;
 
 import com.android.car.CarLog;
 import com.android.car.CarServiceUtils;
+import com.android.car.VehicleStub;
 import com.android.car.internal.ExcludeFromCodeCoverageGeneratedReport;
+import com.android.car.internal.util.Lists;
 import com.android.internal.annotations.GuardedBy;
 import com.android.internal.annotations.VisibleForTesting;
-
-import com.google.android.collect.Lists;
 
 import java.io.PrintWriter;
 import java.lang.ref.WeakReference;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Timer;
@@ -71,17 +63,18 @@ import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
 /**
- * Abstraction for vehicle HAL. This class handles interface with native HAL and do basic parsing
- * of received data (type check). Then each event is sent to corresponding {@link HalServiceBase}
+ * Abstraction for vehicle HAL. This class handles interface with native HAL and do basic parsing of
+ * received data (type check). Then each event is sent to corresponding {@link HalServiceBase}
  * implementation. It is responsibility of {@link HalServiceBase} to convert data to corresponding
  * Car*Service for Car*Manager API.
  */
-public class VehicleHal extends IVehicleCallback.Stub {
+public class VehicleHal implements HalClientCallback {
 
     private static final boolean DBG = false;
 
     /**
-     * Used in {@link VehicleHal#dumpVehiclePropValue} method when copying {@link VehiclePropValue}.
+     * Used in {@link VehicleHal#dumpPropValue} method when copying
+     * {@link HalPropValue}.
      */
     private static final int MAX_BYTE_SIZE = 20;
 
@@ -99,6 +92,8 @@ public class VehicleHal extends IVehicleCallback.Stub {
     private final ClusterHalService mClusterHalService;
     private final EvsHalService mEvsHal;
     private final TimeHalService mTimeHalService;
+    private final HalPropValueBuilder mPropValueBuilder;
+    private final VehicleStub mVehicleStub;
 
     private final Object mLock = new Object();
 
@@ -110,14 +105,14 @@ public class VehicleHal extends IVehicleCallback.Stub {
     private final SparseArray<HalServiceBase> mPropertyHandlers = new SparseArray<>();
     /** This is for iterating all HalServices with fixed order. */
     @GuardedBy("mLock")
-    private final ArrayList<HalServiceBase> mAllServices = new ArrayList<>();
+    private final List<HalServiceBase> mAllServices;
     @GuardedBy("mLock")
-    private final HashMap<Integer, SubscribeOptions> mSubscribedProperties = new HashMap<>();
+    private final SparseArray<SubscribeOptions> mSubscribedProperties = new SparseArray<>();
     @GuardedBy("mLock")
-    private final HashMap<Integer, VehiclePropConfig> mAllProperties = new HashMap<>();
+    private final SparseArray<HalPropConfig> mAllProperties = new SparseArray<>();
 
     @GuardedBy("mLock")
-    private final HashMap<Integer, VehiclePropertyEventInfo> mEventLog = new HashMap<>();
+    private final SparseArray<VehiclePropertyEventInfo> mEventLog = new SparseArray<>();
 
     // Used by injectVHALEvent for testing purposes.  Delimiter for an array of data
     private static final String DATA_DELIMITER = ",";
@@ -126,31 +121,12 @@ public class VehicleHal extends IVehicleCallback.Stub {
      * Constructs a new {@link VehicleHal} object given the {@link Context} and {@link IVehicle}
      * both passed as parameters.
      */
-    public VehicleHal(Context context, IVehicle vehicle) {
-        mHandlerThread = CarServiceUtils.getHandlerThread(
-                VehicleHal.class.getSimpleName());
-        mHandler = new Handler(mHandlerThread.getLooper());
-        mPowerHal = new PowerHalService(this);
-        mPropertyHal = new PropertyHalService(this);
-        mInputHal = new InputHalService(this);
-        mVmsHal = new VmsHalService(context, this);
-        mUserHal = new UserHalService(this);
-        mDiagnosticHal = new DiagnosticHalService(this);
-        mClusterHalService = new ClusterHalService(this);
-        mEvsHal = new EvsHalService(this);
-        mTimeHalService = new TimeHalService(context, this);
-        //TODO(b/202396546): Dedupe this assignment with the other one in constructor below
-        mAllServices.addAll(Arrays.asList(mPowerHal,
-                mInputHal,
-                mDiagnosticHal,
-                mVmsHal,
-                mUserHal,
-                mClusterHalService,
-                mEvsHal,
-                mTimeHalService,
-                mPropertyHal)); // mPropertyHal should be the last.
-        mHalClient = new HalClient(vehicle, mHandlerThread.getLooper(),
-                /* callback= */ this);
+    public VehicleHal(Context context, VehicleStub vehicle) {
+        this(context, /* powerHal= */ null, /* propertyHal= */ null,
+                /* inputHal= */ null, /* vmsHal= */ null, /* userHal= */ null,
+                /* diagnosticHal= */ null, /* clusterHalService= */ null,
+                /* timeHalService= */ null, /* halClient= */ null,
+                CarServiceUtils.getHandlerThread(VehicleHal.class.getSimpleName()), vehicle);
     }
 
     /**
@@ -158,7 +134,8 @@ public class VehicleHal extends IVehicleCallback.Stub {
      * function passed as parameters. This method must be used by tests only.
      */
     @VisibleForTesting
-    VehicleHal(PowerHalService powerHal,
+    VehicleHal(Context context,
+            PowerHalService powerHal,
             PropertyHalService propertyHal,
             InputHalService inputHal,
             VmsHalService vmsHal,
@@ -167,70 +144,67 @@ public class VehicleHal extends IVehicleCallback.Stub {
             ClusterHalService clusterHalService,
             TimeHalService timeHalService,
             HalClient halClient,
-            HandlerThread handlerThread) {
+            HandlerThread handlerThread,
+            VehicleStub vehicle) {
+        // Must be initialized before HalService so that HalService could use this.
+        mPropValueBuilder = vehicle.getHalPropValueBuilder();
         mHandlerThread = handlerThread;
         mHandler = new Handler(mHandlerThread.getLooper());
-        mPowerHal = powerHal;
-        mPropertyHal = propertyHal;
-        mInputHal = inputHal;
-        mVmsHal = vmsHal;
-        mUserHal = userHal;
-        mDiagnosticHal = diagnosticHal;
-        mClusterHalService = clusterHalService;
+        mPowerHal = powerHal != null ? powerHal : new PowerHalService(this);
+        mPropertyHal = propertyHal != null ? propertyHal : new PropertyHalService(this);
+        mInputHal = inputHal != null ? inputHal : new InputHalService(this);
+        mVmsHal = vmsHal != null ? vmsHal : new VmsHalService(context, this);
+        mUserHal = userHal != null ? userHal :  new UserHalService(this);
+        mDiagnosticHal = diagnosticHal != null ? diagnosticHal : new DiagnosticHalService(this);
+        mClusterHalService = clusterHalService != null
+                ? clusterHalService : new ClusterHalService(this);
         mEvsHal = new EvsHalService(this);
-        mTimeHalService = timeHalService;
-        mAllServices.addAll(Arrays.asList(mPowerHal,
+        mTimeHalService = timeHalService != null
+                ? timeHalService : new TimeHalService(context, this);
+        mAllServices = List.of(
+                mPowerHal,
                 mInputHal,
                 mDiagnosticHal,
                 mVmsHal,
                 mUserHal,
+                mClusterHalService,
                 mEvsHal,
                 mTimeHalService,
-                mPropertyHal));
-        mHalClient = halClient;
-    }
-
-    /** Called when connection to Vehicle HAL was restored. */
-    public void vehicleHalReconnected(IVehicle vehicle) {
-        synchronized (mLock) {
-            mHalClient = new HalClient(vehicle, mHandlerThread.getLooper(),
-                    this /*IVehicleCallback*/);
-            SubscribeOptions[] options = mSubscribedProperties.values()
-                    .toArray(new SubscribeOptions[0]);
-            try {
-                mHalClient.subscribe(options);
-            } catch (RemoteException e) {
-                throw new RuntimeException("Failed to subscribe: " + Arrays.asList(options), e);
-            }
-        }
+                mPropertyHal);
+        // mPropertyHal must be the last so that on init/release
+        // it can be used for all other HAL services properties.
+        mHalClient = halClient != null
+                ? halClient : new HalClient(vehicle, mHandlerThread.getLooper(),
+                /* callback= */ this);
+        mVehicleStub = vehicle;
     }
 
     private void fetchAllPropConfigs() {
         synchronized (mLock) {
-            if (!mAllProperties.isEmpty()) { // already set
-                Slog.i(CarLog.TAG_HAL, "fetchAllPropConfigs already fetched");
+            if (mAllProperties.size() != 0) { // already set
+                Slogf.i(CarLog.TAG_HAL, "fetchAllPropConfigs already fetched");
                 return;
             }
         }
-        ArrayList<VehiclePropConfig> configs;
+        HalPropConfig[] configs;
         try {
             configs = mHalClient.getAllPropConfigs();
-            if (configs == null || configs.size() == 0) {
-                Slog.e(CarLog.TAG_HAL, "getAllPropConfigs returned empty configs");
+            if (configs == null || configs.length == 0) {
+                Slogf.e(CarLog.TAG_HAL, "getAllPropConfigs returned empty configs");
                 return;
             }
-        } catch (RemoteException e) {
+        } catch (RemoteException | ServiceSpecificException e) {
             throw new RuntimeException("Unable to retrieve vehicle property configuration", e);
         }
 
         synchronized (mLock) {
             // Create map of all properties
-            for (VehiclePropConfig p : configs) {
+            for (HalPropConfig p : configs) {
                 if (DBG) {
-                    Slog.i(CarLog.TAG_HAL, "Add config for prop:" + Integer.toHexString(p.prop)
-                            + " config:" + p);
+                    Slogf.i(CarLog.TAG_HAL, "Add config for prop:"
+                            + Integer.toHexString(p.getPropId()) + " config:" + p.toString());
                 }
-                mAllProperties.put(p.prop, p);
+                mAllProperties.put(p.getPropId(), p);
             }
         }
     }
@@ -245,23 +219,26 @@ public class VehicleHal extends IVehicleCallback.Stub {
         fetchAllPropConfigs();
 
         // PropertyHalService will take most properties, so make it big enough.
-        ArrayList<VehiclePropConfig> configsForService = new ArrayList<>(mAllServices.size());
-        for (int i = 0; i < mAllServices.size(); i++) {
-            HalServiceBase service = mAllServices.get(i);
-            int[] supportedProps =  service.getAllSupportedProperties();
-            configsForService.clear();
-            synchronized (mLock) {
+        ArrayMap<HalServiceBase, ArrayList<HalPropConfig>> configsForAllServices;
+        synchronized (mLock) {
+            configsForAllServices = new ArrayMap<>(mAllServices.size());
+            for (int i = 0; i < mAllServices.size(); i++) {
+                ArrayList<HalPropConfig> configsForService = new ArrayList();
+                HalServiceBase service = mAllServices.get(i);
+                configsForAllServices.put(service, configsForService);
+                int[] supportedProps = service.getAllSupportedProperties();
                 if (supportedProps.length == 0) {
-                    for (Integer propId : mAllProperties.keySet()) {
+                    for (int j = 0; j < mAllProperties.size(); j++) {
+                        Integer propId = mAllProperties.keyAt(j);
                         if (service.isSupportedProperty(propId)) {
-                            VehiclePropConfig config = mAllProperties.get(propId);
+                            HalPropConfig config = mAllProperties.get(propId);
                             mPropertyHandlers.append(propId, service);
                             configsForService.add(config);
                         }
                     }
                 } else {
                     for (int prop : supportedProps) {
-                        VehiclePropConfig config = mAllProperties.get(prop);
+                        HalPropConfig config = mAllProperties.get(prop);
                         if (config == null) {
                             continue;
                         }
@@ -270,6 +247,12 @@ public class VehicleHal extends IVehicleCallback.Stub {
                     }
                 }
             }
+        }
+
+        for (Map.Entry<HalServiceBase, ArrayList<HalPropConfig>> entry
+                : configsForAllServices.entrySet()) {
+            HalServiceBase service = entry.getKey();
+            ArrayList<HalPropConfig> configsForService = entry.getValue();
             service.takeProperties(configsForService);
             service.init();
         }
@@ -279,21 +262,25 @@ public class VehicleHal extends IVehicleCallback.Stub {
      * Releases all connected services (power management service, input service, etc).
      */
     public void release() {
-        // release in reverse order from init
-        for (int i = mAllServices.size() - 1; i >= 0; i--) {
-            mAllServices.get(i).release();
-        }
+        ArrayList<Integer> subscribedProperties = new ArrayList<>();
         synchronized (mLock) {
-            for (int p : mSubscribedProperties.keySet()) {
-                try {
-                    mHalClient.unsubscribe(p);
-                } catch (RemoteException e) {
-                    //  Ignore exceptions on shutdown path.
-                    Slog.w(CarLog.TAG_HAL, "Failed to unsubscribe", e);
-                }
+            // release in reverse order from init
+            for (int i = mAllServices.size() - 1; i >= 0; i--) {
+                mAllServices.get(i).release();
+            }
+            for (int i = 0; i < mSubscribedProperties.size(); i++) {
+                subscribedProperties.add(mSubscribedProperties.keyAt(i));
             }
             mSubscribedProperties.clear();
             mAllProperties.clear();
+        }
+        for (int i = 0; i < subscribedProperties.size(); i++) {
+            try {
+                mHalClient.unsubscribe(subscribedProperties.get(i));
+            } catch (RemoteException | ServiceSpecificException e) {
+                //  Ignore exceptions on shutdown path.
+                Slogf.w(CarLog.TAG_HAL, "Failed to unsubscribe", e);
+            }
         }
         // keep the looper thread as should be kept for the whole life cycle.
     }
@@ -334,6 +321,11 @@ public class VehicleHal extends IVehicleCallback.Stub {
         return mTimeHalService;
     }
 
+    public HalPropValueBuilder getHalPropValueBuilder() {
+        return mPropValueBuilder;
+    }
+
+    @GuardedBy("mLock")
     private void assertServiceOwnerLocked(HalServiceBase service, int property) {
         if (service != mPropertyHandlers.get(property)) {
             throw new IllegalArgumentException("Property 0x" + toHexString(property)
@@ -344,22 +336,12 @@ public class VehicleHal extends IVehicleCallback.Stub {
     /**
      * Subscribes given properties with sampling rate defaults to 0 and no special flags provided.
      *
-     * @see #subscribeProperty(HalServiceBase, int, float, int)
+     * @throws IllegalArgumentException thrown if property is not supported by VHAL
+     * @see #subscribeProperty(HalServiceBase, int, float)
      */
     public void subscribeProperty(HalServiceBase service, int property)
             throws IllegalArgumentException {
-        subscribeProperty(service, property, /* samplingRateHz= */ 0f,
-                SubscribeFlags.EVENTS_FROM_CAR);
-    }
-
-    /**
-     * Subscribes given properties with default subscribe flag.
-     *
-     * @see #subscribeProperty(HalServiceBase, int, float, int)
-     */
-    public void subscribeProperty(HalServiceBase service, int property, float sampleRateHz)
-            throws IllegalArgumentException {
-        subscribeProperty(service, property, sampleRateHz, SubscribeFlags.EVENTS_FROM_CAR);
+        subscribeProperty(service, property, /* samplingRateHz= */ 0f);
     }
 
     /**
@@ -368,16 +350,15 @@ public class VehicleHal extends IVehicleCallback.Stub {
      * @param service HalService that owns this property
      * @param property property id (VehicleProperty)
      * @param samplingRateHz sampling rate in Hz for continuous properties
-     * @param flags flags from {@link android.hardware.automotive.vehicle.V2_0.SubscribeFlags}
      * @throws IllegalArgumentException thrown if property is not supported by VHAL
      */
-    public void subscribeProperty(HalServiceBase service, int property,
-            float samplingRateHz, int flags) throws IllegalArgumentException {
+    public void subscribeProperty(HalServiceBase service, int property, float samplingRateHz)
+            throws IllegalArgumentException {
         if (DBG) {
-            Slog.i(CarLog.TAG_HAL, "subscribeProperty, service:" + service
+            Slogf.i(CarLog.TAG_HAL, "subscribeProperty, service:" + service
                     + ", " + toCarPropertyLog(property));
         }
-        VehiclePropConfig config;
+        HalPropConfig config;
         synchronized (mLock) {
             config = mAllProperties.get(property);
         }
@@ -389,19 +370,19 @@ public class VehicleHal extends IVehicleCallback.Stub {
             SubscribeOptions opts = new SubscribeOptions();
             opts.propId = property;
             opts.sampleRate = samplingRateHz;
-            opts.flags = flags;
+            opts.areaIds = new int[0];
             synchronized (mLock) {
                 assertServiceOwnerLocked(service, property);
                 mSubscribedProperties.put(property, opts);
             }
             try {
                 mHalClient.subscribe(opts);
-            } catch (RemoteException e) {
-                Slog.e(CarLog.TAG_HAL, "Failed to subscribe to " + toCarPropertyLog(property),
+            } catch (RemoteException | ServiceSpecificException e) {
+                Slogf.w(CarLog.TAG_HAL, "Failed to subscribe to " + toCarPropertyLog(property),
                         e);
             }
         } else {
-            Slog.e(CarLog.TAG_HAL, "Cannot subscribe to " + toCarPropertyLog(property));
+            Slogf.w(CarLog.TAG_HAL, "Cannot subscribe to " + toCarPropertyLog(property));
         }
     }
 
@@ -411,16 +392,16 @@ public class VehicleHal extends IVehicleCallback.Stub {
      */
     public void unsubscribeProperty(HalServiceBase service, int property) {
         if (DBG) {
-            Slog.i(CarLog.TAG_HAL, "unsubscribeProperty, service:" + service
+            Slogf.i(CarLog.TAG_HAL, "unsubscribeProperty, service:" + service
                     + ", " + toCarPropertyLog(property));
         }
-        VehiclePropConfig config;
+        HalPropConfig config;
         synchronized (mLock) {
             config = mAllProperties.get(property);
         }
 
         if (config == null) {
-            Slog.e(CarLog.TAG_HAL, "unsubscribeProperty " + toCarPropertyLog(property)
+            Slogf.w(CarLog.TAG_HAL, "unsubscribeProperty " + toCarPropertyLog(property)
                     + " does not exist");
         } else if (isPropertySubscribable(config)) {
             synchronized (mLock) {
@@ -429,12 +410,12 @@ public class VehicleHal extends IVehicleCallback.Stub {
             }
             try {
                 mHalClient.unsubscribe(property);
-            } catch (RemoteException e) {
-                Slog.e(CarLog.TAG_SERVICE, "Failed to unsubscribe: "
+            } catch (RemoteException | ServiceSpecificException e) {
+                Slogf.w(CarLog.TAG_SERVICE, "Failed to unsubscribe: "
                         + toCarPropertyLog(property), e);
             }
         } else {
-            Slog.e(CarLog.TAG_HAL, "Cannot unsubscribe " + toCarPropertyLog(property));
+            Slogf.w(CarLog.TAG_HAL, "Cannot unsubscribe " + toCarPropertyLog(property));
         }
     }
 
@@ -443,7 +424,7 @@ public class VehicleHal extends IVehicleCallback.Stub {
      */
     public boolean isPropertySupported(int propertyId) {
         synchronized (mLock) {
-            return mAllProperties.containsKey(propertyId);
+            return mAllProperties.contains(propertyId);
         }
     }
 
@@ -454,20 +435,23 @@ public class VehicleHal extends IVehicleCallback.Stub {
      * {@code IllegalStateException}. If the property does not exist, it will simply return
      * {@code null}.
      */
-    public @Nullable VehiclePropValue getIfAvailableOrFail(int propertyId, int numberOfRetries) {
+    @Nullable
+    public HalPropValue getIfAvailableOrFail(int propertyId, int numberOfRetries) {
         if (!isPropertySupported(propertyId)) {
             return null;
         }
-        VehiclePropValue value;
+        Exception lastException = null;
         for (int i = 0; i < numberOfRetries; i++) {
             try {
                 return get(propertyId);
-            } catch (ServiceSpecificException e) {
-                Slog.e(CarLog.TAG_HAL, "Cannot get " + toCarPropertyLog(propertyId), e);
+            } catch (Exception e) {
+                Slogf.w(CarLog.TAG_HAL, "Cannot get " + toCarPropertyLog(propertyId), e);
+                lastException = e;
             }
         }
         throw new IllegalStateException("Cannot get property: 0x" + toHexString(propertyId)
-                + " after " + numberOfRetries + " retries");
+                + " after " + numberOfRetries + " retries" + ", last exception: "
+                + lastException);
     }
 
     /**
@@ -478,94 +462,150 @@ public class VehicleHal extends IVehicleCallback.Stub {
      * and can have worse performance. Use this only for accessing vhal properties before
      * {@code ICarImpl.init()} phase.
      */
-    public @Nullable VehiclePropValue getIfAvailableOrFailForEarlyStage(int propertyId,
+    @Nullable
+    public HalPropValue getIfAvailableOrFailForEarlyStage(int propertyId,
             int numberOfRetries) {
         fetchAllPropConfigs();
         return getIfAvailableOrFail(propertyId, numberOfRetries);
     }
 
     /**
-     * Returns the property's {@link VehiclePropValue} for the property id passed as parameter and
+     * Returns the property's {@link HalPropValue} for the property id passed as parameter and
      * not specified area.
+     *
+     * @throws IllegalArgumentException if argument is invalid
+     * @throws ServiceSpecificException if VHAL returns error
      */
-    public VehiclePropValue get(int propertyId) {
+    public HalPropValue get(int propertyId)
+            throws IllegalArgumentException, ServiceSpecificException {
         return get(propertyId, NO_AREA);
     }
 
     /**
-     * Returns the property's {@link VehiclePropValue} for the property id and area id passed as
+     * Returns the property's {@link HalPropValue} for the property id and area id passed as
      * parameters.
+     *
+     * @throws IllegalArgumentException if argument is invalid
+     * @throws ServiceSpecificException if VHAL returns error
      */
-    public VehiclePropValue get(int propertyId, int areaId) {
+    public HalPropValue get(int propertyId, int areaId)
+            throws IllegalArgumentException, ServiceSpecificException {
         if (DBG) {
-            Slog.i(CarLog.TAG_HAL, "get, " + toCarPropertyLog(propertyId)
+            Slogf.i(CarLog.TAG_HAL, "get, " + toCarPropertyLog(propertyId)
                     + toCarAreaLog(areaId));
         }
-        return mHalClient.getValue(createPropValue(propertyId, areaId));
+        return mHalClient.getValue(mPropValueBuilder.build(propertyId, areaId));
     }
 
     /**
      * Returns the property object value for the class and property id passed as parameter and
      * no area specified.
+     *
+     * @throws IllegalArgumentException if argument is invalid
+     * @throws ServiceSpecificException if VHAL returns error
      */
-    public <T> T get(Class clazz, int propertyId) {
-        return get(clazz, createPropValue(propertyId, NO_AREA));
+    public <T> T get(Class clazz, int propertyId)
+            throws IllegalArgumentException, ServiceSpecificException {
+        return get(clazz, propertyId, NO_AREA);
     }
 
     /**
      * Returns the property object value for the class, property id, and area id passed as
      * parameter.
+     *
+     * @throws IllegalArgumentException if argument is invalid
+     * @throws ServiceSpecificException if VHAL returns error
      */
-    public <T> T get(Class clazz, int propertyId, int areaId) {
-        return get(clazz, createPropValue(propertyId, areaId));
+    public <T> T get(Class clazz, int propertyId, int areaId)
+            throws IllegalArgumentException, ServiceSpecificException {
+        return get(clazz, mPropValueBuilder.build(propertyId, areaId));
     }
 
     /**
      * Returns the property object value for the class and requested property value passed as
      * parameter.
+     *
+     * @throws IllegalArgumentException if argument is invalid
+     * @throws ServiceSpecificException if VHAL returns error
      */
     @SuppressWarnings("unchecked")
-    public <T> T get(Class clazz, VehiclePropValue requestedPropValue) {
-        VehiclePropValue propValue;
+    public <T> T get(Class clazz, HalPropValue requestedPropValue)
+            throws IllegalArgumentException, ServiceSpecificException {
+        HalPropValue propValue;
         propValue = mHalClient.getValue(requestedPropValue);
 
         if (clazz == Long.class || clazz == long.class) {
-            return (T) propValue.value.int64Values.get(0);
+            Long value = propValue.getInt64Value(0);
+            return (T) value;
         } else if (clazz == Integer.class || clazz == int.class) {
-            return (T) propValue.value.int32Values.get(0);
+            Integer value = propValue.getInt32Value(0);
+            return (T) value;
         } else if (clazz == Boolean.class || clazz == boolean.class) {
-            return (T) Boolean.valueOf(propValue.value.int32Values.get(0) == 1);
+            Boolean value = Boolean.valueOf(propValue.getInt32Value(0) == 1);
+            return (T) value;
         } else if (clazz == Float.class || clazz == float.class) {
-            return (T) propValue.value.floatValues.get(0);
+            Float value = propValue.getFloatValue(0);
+            return (T) value;
         } else if (clazz == Long[].class) {
-            Long[] longArray = new Long[propValue.value.int64Values.size()];
-            return (T) propValue.value.int32Values.toArray(longArray);
+            int size = propValue.getInt64ValuesSize();
+            Long[] longArray = new Long[size];
+            for (int i = 0; i < size; i++) {
+                longArray[i] = propValue.getInt64Value(i);
+            }
+            return (T) longArray;
         } else if (clazz == Integer[].class) {
-            Integer[] intArray = new Integer[propValue.value.int32Values.size()];
-            return (T) propValue.value.int32Values.toArray(intArray);
+            int size = propValue.getInt32ValuesSize();
+            Integer[] intArray = new Integer[size];
+            for (int i = 0; i < size; i++) {
+                intArray[i] = propValue.getInt32Value(i);
+            }
+            return (T) intArray;
         } else if (clazz == Float[].class) {
-            Float[] floatArray = new Float[propValue.value.floatValues.size()];
-            return (T) propValue.value.floatValues.toArray(floatArray);
+            int size = propValue.getFloatValuesSize();
+            Float[] floatArray = new Float[size];
+            for (int i = 0; i < size; i++) {
+                floatArray[i] = propValue.getFloatValue(i);
+            }
+            return (T) floatArray;
         } else if (clazz == long[].class) {
-            return (T) toLongArray(propValue.value.int64Values);
+            int size = propValue.getInt64ValuesSize();
+            long[] longArray = new long[size];
+            for (int i = 0; i < size; i++) {
+                longArray[i] = propValue.getInt64Value(i);
+            }
+            return (T) longArray;
         } else if (clazz == int[].class) {
-            return (T) toIntArray(propValue.value.int32Values);
+            int size = propValue.getInt32ValuesSize();
+            int[] intArray = new int[size];
+            for (int i = 0; i < size; i++) {
+                intArray[i] = propValue.getInt32Value(i);
+            }
+            return (T) intArray;
         } else if (clazz == float[].class) {
-            return (T) toFloatArray(propValue.value.floatValues);
+            int size = propValue.getFloatValuesSize();
+            float[] floatArray = new float[size];
+            for (int i = 0; i < size; i++) {
+                floatArray[i] = propValue.getFloatValue(i);
+            }
+            return (T) floatArray;
         } else if (clazz == byte[].class) {
-            return (T) toByteArray(propValue.value.bytes);
+            return (T) propValue.getByteArray();
         } else if (clazz == String.class) {
-            return (T) propValue.value.stringValue;
+            return (T) propValue.getStringValue();
         } else {
             throw new IllegalArgumentException("Unexpected type: " + clazz);
         }
     }
 
     /**
-     * Returns the vehicle's {@link VehiclePropValue} for the requested property value passed
+     * Returns the vehicle's {@link HalPropValue} for the requested property value passed
      * as parameter.
+     *
+     * @throws IllegalArgumentException if argument is invalid
+     * @throws ServiceSpecificException if VHAL returns error
      */
-    public VehiclePropValue get(VehiclePropValue requestedPropValue) {
+    public HalPropValue get(HalPropValue requestedPropValue)
+            throws IllegalArgumentException, ServiceSpecificException {
         return mHalClient.getValue(requestedPropValue);
     }
 
@@ -574,7 +614,11 @@ public class VehicleHal extends IVehicleCallback.Stub {
      * if the property id passed as parameter is not linked to any subscribed property.
      */
     public float getSampleRate(int propId) {
-        SubscribeOptions opts = mSubscribedProperties.get(propId);
+        SubscribeOptions opts;
+        synchronized (mLock) {
+            opts = mSubscribedProperties.get(propId);
+        }
+
         if (opts == null) {
             // No sample rate for this property
             return NO_SAMPLE_RATE;
@@ -583,23 +627,30 @@ public class VehicleHal extends IVehicleCallback.Stub {
         }
     }
 
-    protected void set(VehiclePropValue propValue) {
+    /**
+     * Set property.
+     *
+     * @throws IllegalArgumentException if argument is invalid
+     * @throws ServiceSpecificException if VHAL returns error
+     */
+    public void set(HalPropValue propValue)
+            throws IllegalArgumentException, ServiceSpecificException {
         mHalClient.setValue(propValue);
     }
 
     @CheckResult
-    VehiclePropValueSetter set(int propId) {
-        return new VehiclePropValueSetter(mHalClient, propId, NO_AREA);
+    HalPropValueSetter set(int propId) {
+        return set(propId, NO_AREA);
     }
 
     @CheckResult
-    VehiclePropValueSetter set(int propId, int areaId) {
-        return new VehiclePropValueSetter(mHalClient, propId, areaId);
+    HalPropValueSetter set(int propId, int areaId) {
+        return new HalPropValueSetter(mHalClient, propId, areaId);
     }
 
-    static boolean isPropertySubscribable(VehiclePropConfig config) {
-        if ((config.access & VehiclePropertyAccess.READ) == 0
-                || (config.changeMode == VehiclePropertyChangeMode.STATIC)) {
+    static boolean isPropertySubscribable(HalPropConfig config) {
+        if ((config.getAccess() & VehiclePropertyAccess.READ) == 0
+                || (config.getChangeMode() == VehiclePropertyChangeMode.STATIC)) {
             return false;
         }
         return true;
@@ -609,21 +660,23 @@ public class VehicleHal extends IVehicleCallback.Stub {
 
     // should be posted to the mHandlerThread
     @Override
-    public void onPropertyEvent(ArrayList<VehiclePropValue> propValues) {
+    public void onPropertyEvent(ArrayList<HalPropValue> propValues) {
         synchronized (mLock) {
-            for (VehiclePropValue v : propValues) {
-                HalServiceBase service = mPropertyHandlers.get(v.prop);
+            for (int i = 0; i < propValues.size(); i++) {
+                HalPropValue v = propValues.get(i);
+                int propId = v.getPropId();
+                HalServiceBase service = mPropertyHandlers.get(propId);
                 if (service == null) {
-                    Slog.e(CarLog.TAG_HAL, "HalService not found for prop: 0x"
-                            + toHexString(v.prop));
+                    Slogf.e(CarLog.TAG_HAL, "HalService not found for prop: 0x"
+                            + toHexString(propId));
                     continue;
                 }
                 service.getDispatchList().add(v);
                 mServicesToDispatch.add(service);
-                VehiclePropertyEventInfo info = mEventLog.get(v.prop);
+                VehiclePropertyEventInfo info = mEventLog.get(propId);
                 if (info == null) {
                     info = new VehiclePropertyEventInfo(v);
-                    mEventLog.put(v.prop, info);
+                    mEventLog.put(propId, info);
                 } else {
                     info.addNewEvent(v);
                 }
@@ -636,22 +689,48 @@ public class VehicleHal extends IVehicleCallback.Stub {
         mServicesToDispatch.clear();
     }
 
-    @Override
-    public void onPropertySet(VehiclePropValue value) {
-        // No need to handle on-property-set events in HAL service yet.
-    }
-
     // should be posted to the mHandlerThread
     @Override
-    public void onPropertySetError(@CarPropertyManager.CarSetPropertyErrorCode int errorCode,
-            int propId, int areaId) {
-        Slog.e(CarLog.TAG_HAL, String.format("onPropertySetError, errorCode: %d, prop: 0x%x, "
-                + "area: 0x%x", errorCode, propId, areaId));
-        if (propId != VehicleProperty.INVALID) {
-            HalServiceBase service = mPropertyHandlers.get(propId);
-            if (service != null) {
-                service.onPropertySetError(propId, areaId, errorCode);
+    public void onPropertySetError(ArrayList<VehiclePropError> errors) {
+        SparseArray<ArrayList<VehiclePropError>> errorsByPropId =
+                new SparseArray<ArrayList<VehiclePropError>>();
+        for (int i = 0; i < errors.size(); i++) {
+            VehiclePropError error = errors.get(i);
+            int errorCode = error.errorCode;
+            int propId = error.propId;
+            int areaId = error.areaId;
+            Slogf.w(
+                    CarLog.TAG_HAL,
+                    "onPropertySetError, errorCode: %d, prop: 0x%x, area: 0x%x",
+                    errorCode,
+                    propId,
+                    areaId);
+            if (propId == VehicleProperty.INVALID) {
+                continue;
             }
+
+            ArrayList<VehiclePropError> propErrors;
+            if (errorsByPropId.get(propId) == null) {
+                propErrors = new ArrayList<VehiclePropError>();
+                errorsByPropId.put(propId, propErrors);
+            } else {
+                propErrors = errorsByPropId.get(propId);
+            }
+            propErrors.add(error);
+        }
+
+        for (int i = 0; i < errorsByPropId.size(); i++) {
+            int propId = errorsByPropId.keyAt(i);
+            HalServiceBase service;
+            synchronized (mLock) {
+                service = mPropertyHandlers.get(propId);
+            }
+            if (service == null) {
+                continue;
+            }
+
+            ArrayList<VehiclePropError> propErrors = errorsByPropId.get(propId);
+            service.onPropertySetError(propErrors);
         }
     }
 
@@ -660,25 +739,27 @@ public class VehicleHal extends IVehicleCallback.Stub {
      */
     @ExcludeFromCodeCoverageGeneratedReport(reason = DUMP_INFO)
     public void dump(PrintWriter writer) {
-        writer.println("**dump HAL services**");
-        for (HalServiceBase service: mAllServices) {
-            service.dump(writer);
-        }
-        // Dump all VHAL property configure.
-        dumpPropertyConfigs(writer, -1);
-        writer.printf("**All Events, now ns:%d**\n",
-                SystemClock.elapsedRealtimeNanos());
-        for (VehiclePropertyEventInfo info : mEventLog.values()) {
-            writer.printf("event count:%d, lastEvent: ", info.mEventCount);
-            dumpVehiclePropValue(writer, info.mLastEvent);
-        }
-
-        writer.println("**Property handlers**");
-        for (int i = 0; i < mPropertyHandlers.size(); i++) {
-            int propId = mPropertyHandlers.keyAt(i);
-            HalServiceBase service = mPropertyHandlers.valueAt(i);
-            writer.printf("Property Id: %d // 0x%x name: %s, service: %s\n", propId, propId,
-                    VehiclePropertyIds.toString(propId), service);
+        synchronized (mLock) {
+            writer.println("**dump HAL services**");
+            for (int i = 0; i < mAllServices.size(); i++) {
+                mAllServices.get(i).dump(writer);
+            }
+            // Dump all VHAL property configure.
+            dumpPropertyConfigs(writer, -1);
+            writer.printf("**All Events, now ns:%d**\n",
+                    SystemClock.elapsedRealtimeNanos());
+            for (int i = 0; i < mEventLog.size(); i++) {
+                VehiclePropertyEventInfo info = mEventLog.valueAt(i);
+                writer.printf("event count:%d, lastEvent: ", info.mEventCount);
+                dumpPropValue(writer, info.mLastEvent);
+            }
+            writer.println("**Property handlers**");
+            for (int i = 0; i < mPropertyHandlers.size(); i++) {
+                int propId = mPropertyHandlers.keyAt(i);
+                HalServiceBase service = mPropertyHandlers.valueAt(i);
+                writer.printf("Property Id: %d // 0x%x name: %s, service: %s\n", propId, propId,
+                        VehiclePropertyIds.toString(propId), service);
+            }
         }
     }
 
@@ -686,8 +767,10 @@ public class VehicleHal extends IVehicleCallback.Stub {
      * Dumps the list of HALs.
      */
     public void dumpListHals(PrintWriter writer) {
-        for (HalServiceBase service: mAllServices) {
-            writer.println(service.getClass().getName());
+        synchronized (mLock) {
+            for (int i = 0; i < mAllServices.size(); i++) {
+                writer.println(mAllServices.get(i).getClass().getName());
+            }
         }
     }
 
@@ -695,73 +778,97 @@ public class VehicleHal extends IVehicleCallback.Stub {
      * Dumps the given HALs.
      */
     public void dumpSpecificHals(PrintWriter writer, String... halNames) {
-        Map<String, HalServiceBase> byName = mAllServices.stream()
-                .collect(Collectors.toMap(s -> s.getClass().getSimpleName(), s -> s));
-        for (String halName : halNames) {
-            HalServiceBase service = byName.get(halName);
-            if (service == null) {
-                writer.printf("No HAL named %s. Valid options are: %s\n", halName, byName.keySet());
-                continue;
+        synchronized (mLock) {
+            Map<String, HalServiceBase> byName = mAllServices.stream()
+                    .collect(Collectors.toMap(s -> s.getClass().getSimpleName(), s -> s));
+            for (String halName : halNames) {
+                HalServiceBase service = byName.get(halName);
+                if (service == null) {
+                    writer.printf("No HAL named %s. Valid options are: %s\n",
+                            halName, byName.keySet());
+                    continue;
+                }
+                service.dump(writer);
             }
-            service.dump(writer);
         }
     }
 
     /**
      * Dumps vehicle property values.
-     * @param writer
-     * @param propId property id, dump all properties' value if it is empty string.
+     *
+     * @param propId property id, dump all properties' value if it is empty string
      * @param areaId areaId of the property, dump the property for all areaIds in the config
-     * if it is empty string.
+     *               if it is empty string
      */
-    public void dumpPropertyValueByCommend(PrintWriter writer, int propId, int areaId) {
+    public void dumpPropertyValueByCommand(PrintWriter writer, int propId, int areaId) {
         if (propId == -1) {
             writer.println("**All property values**");
-            for (VehiclePropConfig config : mAllProperties.values()) {
-                dumpPropertyValueByConfig(writer, config);
+            synchronized (mLock) {
+                for (int i = 0; i < mAllProperties.size(); i++) {
+                    HalPropConfig config = mAllProperties.valueAt(i);
+                    dumpPropertyValueByConfig(writer, config);
+                }
             }
         } else if (areaId == -1) {
-            VehiclePropConfig config = mAllProperties.get(propId);
-            if (config == null) {
-                writer.print("Property ");
-                dumpPropHelper(writer, propId);
-                writer.print(" not supported by HAL\n");
-                return;
+            synchronized (mLock) {
+                HalPropConfig config = mAllProperties.get(propId);
+                if (config == null) {
+                    writer.print("Property ");
+                    dumpPropHelper(writer, propId);
+                    writer.print(" not supported by HAL\n");
+                    return;
+                }
+                dumpPropertyValueByConfig(writer, config);
             }
-            dumpPropertyValueByConfig(writer, config);
         } else {
             try {
-                VehiclePropValue value = get(propId, areaId);
-                dumpVehiclePropValue(writer, value);
+                HalPropValue value = get(propId, areaId);
+                dumpPropValue(writer, value);
             } catch (RuntimeException e) {
                 writer.printf("Can not get property value for property: %d // 0x%x "
-                                + "in areaId: %d // 0x%x.\n", propId, propId, areaId, areaId);
+                        + "in areaId: %d // 0x%x.\n", propId, propId, areaId, areaId);
             }
         }
+    }
+
+    /**
+     * Gets all property configs from VHAL.
+     */
+    public HalPropConfig[] getAllPropConfigs() throws RemoteException, ServiceSpecificException {
+        return mVehicleStub.getAllPropConfigs();
+    }
+
+    /**
+     * Checks whether we are connected to AIDL VHAL: {@code true} or HIDL VHAL: {@code false}.
+     */
+    public boolean isAidlVhal() {
+        return mVehicleStub.isAidlVhal();
     }
 
     private static void dumpPropHelper(PrintWriter pw, int propId) {
         pw.printf("Id: %d // 0x%x, name: %s ", propId, propId, VehiclePropertyIds.toString(propId));
     }
 
-    private void dumpPropertyValueByConfig(PrintWriter writer, VehiclePropConfig config) {
-        if (config.areaConfigs.isEmpty()) {
+    private void dumpPropertyValueByConfig(PrintWriter writer, HalPropConfig config) {
+        int propId = config.getPropId();
+        HalAreaConfig[] areaConfigs = config.getAreaConfigs();
+        if (areaConfigs == null || areaConfigs.length == 0) {
             try {
-                VehiclePropValue value = get(config.prop);
-                dumpVehiclePropValue(writer, value);
+                HalPropValue value = get(config.getPropId());
+                dumpPropValue(writer, value);
             } catch (RuntimeException e) {
                 writer.printf("Can not get property value for property: %d // 0x%x,"
-                                + " areaId: 0 \n", config.prop, config.prop);
+                        + " areaId: 0 \n", propId, propId);
             }
         } else {
-            for (VehicleAreaConfig areaConfig : config.areaConfigs) {
-                int area = areaConfig.areaId;
+            for (HalAreaConfig areaConfig : areaConfigs) {
+                int areaId = areaConfig.getAreaId();
                 try {
-                    VehiclePropValue value = get(config.prop, area);
-                    dumpVehiclePropValue(writer, value);
+                    HalPropValue value = get(propId, areaId);
+                    dumpPropValue(writer, value);
                 } catch (RuntimeException e) {
                     writer.printf("Can not get property value for property: %d // 0x%x "
-                            + "in areaId: %d // 0x%x\n", config.prop, config.prop , area, area);
+                            + "in areaId: %d // 0x%x\n", propId, propId, areaId, areaId);
                 }
             }
         }
@@ -769,25 +876,28 @@ public class VehicleHal extends IVehicleCallback.Stub {
 
     /**
      * Dump VHAL property configs.
+     * Dump all properties if propid param is empty.
      *
-     * @param writer
-     * @param propId Property ID. If propid is empty string, dump all properties.
+     * @param propId the property ID
      */
     public void dumpPropertyConfigs(PrintWriter writer, int propId) {
-        List<VehiclePropConfig> configList;
+        HalPropConfig[] configs;
         synchronized (mLock) {
-            configList = new ArrayList<>(mAllProperties.values());
+            configs = new HalPropConfig[mAllProperties.size()];
+            for (int i = 0; i < mAllProperties.size(); i++) {
+                configs[i] = mAllProperties.valueAt(i);
+            }
         }
 
         if (propId == -1) {
             writer.println("**All properties**");
-            for (VehiclePropConfig config : configList) {
+            for (HalPropConfig config : configs) {
                 dumpPropertyConfigsHelp(writer, config);
             }
             return;
         }
-        for (VehiclePropConfig config : configList) {
-            if (config.prop == propId) {
+        for (HalPropConfig config : configs) {
+            if (config.getPropId() == propId) {
                 dumpPropertyConfigsHelp(writer, config);
                 return;
             }
@@ -796,17 +906,22 @@ public class VehicleHal extends IVehicleCallback.Stub {
     }
 
     /** Dumps VehiclePropertyConfigs */
-    private static void dumpPropertyConfigsHelp(PrintWriter writer, VehiclePropConfig config) {
+    private static void dumpPropertyConfigsHelp(PrintWriter writer, HalPropConfig config) {
+        int propId = config.getPropId();
         writer.printf("Property:0x%x, Property name:%s, access:0x%x, changeMode:0x%x, "
                         + "config:%s, fs min:%f, fs max:%f\n",
-                config.prop, VehiclePropertyIds.toString(config.prop), config.access,
-                config.changeMode, Arrays.toString(config.configArray.toArray()),
-                config.minSampleRate, config.maxSampleRate);
-        for (VehicleAreaConfig area : config.areaConfigs) {
+                propId, VehiclePropertyIds.toString(propId), config.getAccess(),
+                config.getChangeMode(), Arrays.toString(config.getConfigArray()),
+                config.getMinSampleRate(), config.getMaxSampleRate());
+        if (config.getAreaConfigs() == null) {
+            return;
+        }
+        for (HalAreaConfig area : config.getAreaConfigs()) {
             writer.printf("\tareaId:0x%x, f min:%f, f max:%f, i min:%d, i max:%d,"
-                    + " i64 min:%d, i64 max:%d\n",
-                    area.areaId, area.minFloatValue, area.maxFloatValue, area.minInt32Value,
-                    area.maxInt32Value, area.minInt64Value, area.maxInt64Value);
+                            + " i64 min:%d, i64 max:%d\n",
+                    area.getAreaId(), area.getMinFloatValue(), area.getMaxFloatValue(),
+                    area.getMinInt32Value(), area.getMaxInt32Value(), area.getMinInt64Value(),
+                    area.getMaxInt64Value());
         }
     }
 
@@ -814,20 +929,18 @@ public class VehicleHal extends IVehicleCallback.Stub {
      * Inject a VHAL event
      *
      * @param property the Vehicle property Id as defined in the HAL
-     * @param zone     Zone that this event services
-     * @param value    Data value of the event
-     * @param delayTime Add a certain duration to event timestamp
+     * @param zone the zone that this event services
+     * @param value the data value of the event
+     * @param delayTime add a certain duration to event timestamp
      */
     public void injectVhalEvent(int property, int zone, String value, int delayTime)
             throws NumberFormatException {
-
-        VehiclePropValue v = createPropValueForInjecting(property, zone,
-                Arrays.asList(value.split(DATA_DELIMITER)));
+        long timestamp = SystemClock.elapsedRealtimeNanos() + TimeUnit.SECONDS.toNanos(delayTime);
+        HalPropValue v = createPropValueForInjecting(mPropValueBuilder, property, zone,
+                Arrays.asList(value.split(DATA_DELIMITER)), timestamp);
         if (v == null) {
             return;
         }
-        // update timestamp
-        v.timestamp = SystemClock.elapsedRealtimeNanos() + TimeUnit.SECONDS.toNanos(delayTime);
         mHandler.post(() -> onPropertyEvent(Lists.newArrayList(v)));
     }
 
@@ -835,22 +948,22 @@ public class VehicleHal extends IVehicleCallback.Stub {
      * Injects continuous VHAL events.
      *
      * @param property the Vehicle property Id as defined in the HAL
-     * @param zone Zone that this event services
-     * @param value Data value of the event
-     * @param sampleRate Sample Rate for events in Hz
-     * @param timeDurationInSec The duration for injecting events in seconds
+     * @param zone the zone that this event services
+     * @param value the data value of the event
+     * @param sampleRate the sample rate for events in Hz
+     * @param timeDurationInSec the duration for injecting events in seconds
      */
     public void injectContinuousVhalEvent(int property, int zone, String value,
             float sampleRate, long timeDurationInSec) {
 
-        VehiclePropValue v = createPropValueForInjecting(property, zone,
-                new ArrayList<>(Arrays.asList(value.split(DATA_DELIMITER))));
+        HalPropValue v = createPropValueForInjecting(mPropValueBuilder, property, zone,
+                new ArrayList<>(Arrays.asList(value.split(DATA_DELIMITER))), 0);
         if (v == null) {
             return;
         }
         // rate in Hz
         if (sampleRate <= 0) {
-            Slog.e(CarLog.TAG_HAL, "Inject events at an invalid sample rate: " + sampleRate);
+            Slogf.e(CarLog.TAG_HAL, "Inject events at an invalid sample rate: " + sampleRate);
             return;
         }
         long period = (long) (1000 / sampleRate);
@@ -864,8 +977,10 @@ public class VehicleHal extends IVehicleCallback.Stub {
                     timer.purge();
                 } else {
                     // Avoid the fake events be covered by real Event
-                    v.timestamp = SystemClock.elapsedRealtimeNanos()
+                    long timestamp = SystemClock.elapsedRealtimeNanos()
                             + TimeUnit.SECONDS.toNanos(timeDurationInSec);
+                    HalPropValue v = createPropValueForInjecting(mPropValueBuilder, property, zone,
+                            new ArrayList<>(Arrays.asList(value.split(DATA_DELIMITER))), timestamp);
                     mHandler.post(() -> onPropertyEvent(Lists.newArrayList(v)));
                 }
             }
@@ -874,117 +989,142 @@ public class VehicleHal extends IVehicleCallback.Stub {
 
     // Returns null if the property type is unsupported.
     @Nullable
-    private static VehiclePropValue createPropValueForInjecting(int propId, int zoneId,
-            List<String> dataList) {
-        VehiclePropValue v = createPropValue(propId, zoneId);
+    private static HalPropValue createPropValueForInjecting(HalPropValueBuilder builder,
+            int propId, int zoneId, List<String> dataList, long timestamp) {
         int propertyType = propId & VehiclePropertyType.MASK;
         // Values can be comma separated list
         switch (propertyType) {
             case VehiclePropertyType.BOOLEAN:
                 boolean boolValue = Boolean.parseBoolean(dataList.get(0));
-                v.value.int32Values.add(boolValue ? 1 : 0);
-                break;
+                return builder.build(propId, zoneId, timestamp, VehiclePropertyStatus.AVAILABLE,
+                        boolValue ? 1 : 0);
             case VehiclePropertyType.INT32:
             case VehiclePropertyType.INT32_VEC:
-                for (String s : dataList) {
-                    v.value.int32Values.add(Integer.decode(s));
+                int[] intValues = new int[dataList.size()];
+                for (int i = 0; i < dataList.size(); i++) {
+                    intValues[i] = Integer.decode(dataList.get(i));
                 }
-                break;
+                return builder.build(propId, zoneId, timestamp, VehiclePropertyStatus.AVAILABLE,
+                        intValues);
             case VehiclePropertyType.FLOAT:
             case VehiclePropertyType.FLOAT_VEC:
-                for (String s : dataList) {
-                    v.value.floatValues.add(Float.parseFloat(s));
+                float[] floatValues = new float[dataList.size()];
+                for (int i = 0; i < dataList.size(); i++) {
+                    floatValues[i] = Float.parseFloat(dataList.get(i));
                 }
-                break;
+                return builder.build(propId, zoneId, timestamp, VehiclePropertyStatus.AVAILABLE,
+                        floatValues);
             default:
-                Slog.e(CarLog.TAG_HAL, "Property type unsupported:" + propertyType);
+                Slogf.e(CarLog.TAG_HAL, "Property type unsupported:" + propertyType);
                 return null;
         }
-        return v;
     }
 
     private static class VehiclePropertyEventInfo {
         private int mEventCount;
-        private VehiclePropValue mLastEvent;
+        private HalPropValue mLastEvent;
 
-        private VehiclePropertyEventInfo(VehiclePropValue event) {
+        private VehiclePropertyEventInfo(HalPropValue event) {
             mEventCount = 1;
             mLastEvent = event;
         }
 
-        private void addNewEvent(VehiclePropValue event) {
+        private void addNewEvent(HalPropValue event) {
             mEventCount++;
             mLastEvent = event;
         }
     }
 
-    final class VehiclePropValueSetter {
+    final class HalPropValueSetter {
         final WeakReference<HalClient> mClient;
-        final VehiclePropValue mPropValue;
+        final int mPropId;
+        final int mAreaId;
 
-        private VehiclePropValueSetter(HalClient client, int propId, int areaId) {
+        private HalPropValueSetter(HalClient client, int propId, int areaId) {
             mClient = new WeakReference<>(client);
-            mPropValue = new VehiclePropValue();
-            mPropValue.prop = propId;
-            mPropValue.areaId = areaId;
+            mPropId = propId;
+            mAreaId = areaId;
         }
 
-        void to(boolean value) {
+        /**
+         * Set the property to the given value.
+         *
+         * @throws IllegalArgumentException if argument is invalid
+         * @throws ServiceSpecificException if VHAL returns error
+         */
+        void to(boolean value) throws IllegalArgumentException, ServiceSpecificException {
             to(value ? 1 : 0);
         }
 
-        void to(int value) {
-            mPropValue.value.int32Values.add(value);
-            submit();
+        /**
+         * Set the property to the given value.
+         *
+         * @throws IllegalArgumentException if argument is invalid
+         * @throws ServiceSpecificException if VHAL returns error
+         */
+        void to(int value) throws IllegalArgumentException, ServiceSpecificException {
+            HalPropValue propValue = mPropValueBuilder.build(mPropId, mAreaId, value);
+            submit(propValue);
         }
 
-        void to(int[] values) {
+        /**
+         * Set the property to the given values.
+         *
+         * @throws IllegalArgumentException if argument is invalid
+         * @throws ServiceSpecificException if VHAL returns error
+         */
+        void to(int[] values) throws IllegalArgumentException, ServiceSpecificException {
+            HalPropValue propValue = mPropValueBuilder.build(mPropId, mAreaId, values);
+            submit(propValue);
+        }
+
+        /**
+         * Set the property to the given values.
+         *
+         * @throws IllegalArgumentException if argument is invalid
+         * @throws ServiceSpecificException if VHAL returns error
+         */
+        void to(Collection<Integer> values)
+                throws IllegalArgumentException, ServiceSpecificException {
+            int[] intValues = new int[values.size()];
+            int i = 0;
             for (int value : values) {
-                mPropValue.value.int32Values.add(value);
+                intValues[i] = value;
+                i++;
             }
-            submit();
+            HalPropValue propValue = mPropValueBuilder.build(mPropId, mAreaId, intValues);
+            submit(propValue);
         }
 
-        void to(Collection<Integer> values) {
-            mPropValue.value.int32Values.addAll(values);
-            submit();
-        }
-
-        void submit() {
-            HalClient client =  mClient.get();
+        void submit(HalPropValue propValue)
+                throws IllegalArgumentException, ServiceSpecificException {
+            HalClient client = mClient.get();
             if (client != null) {
                 if (DBG) {
-                    Slog.i(CarLog.TAG_HAL, "set, " + toCarPropertyLog(mPropValue.prop)
-                            + toCarAreaLog(mPropValue.areaId));
+                    Slogf.i(CarLog.TAG_HAL, "set, " + toCarPropertyLog(mPropId)
+                            + toCarAreaLog(mAreaId));
                 }
-                client.setValue(mPropValue);
+                client.setValue(propValue);
             }
         }
     }
 
-    private static void dumpVehiclePropValue(PrintWriter writer, VehiclePropValue value) {
+    private static void dumpPropValue(PrintWriter writer, HalPropValue value) {
         String bytesString = "";
-        if (value.value.bytes.size() > MAX_BYTE_SIZE) {
-            Object[] bytes = Arrays.copyOf(value.value.bytes.toArray(), MAX_BYTE_SIZE);
+        byte[] byteValues = value.getByteArray();
+        if (byteValues.length > MAX_BYTE_SIZE) {
+            byte[] bytes = Arrays.copyOf(byteValues, MAX_BYTE_SIZE);
             bytesString = Arrays.toString(bytes);
         } else {
-            bytesString = Arrays.toString(value.value.bytes.toArray());
+            bytesString = Arrays.toString(byteValues);
         }
 
         writer.printf("Property:0x%x, status: %d, timestamp: %d, zone: 0x%x, "
-                + "floatValues: %s, int32Values: %s, int64Values: %s, bytes: %s, string: %s\n",
-                value.prop, value.status, value.timestamp, value.areaId,
-                Arrays.toString(value.value.floatValues.toArray()),
-                Arrays.toString(value.value.int32Values.toArray()),
-                Arrays.toString(value.value.int64Values.toArray()),
-                bytesString, value.value.stringValue);
-    }
-
-    private static VehiclePropValue createPropValue(int propId, int areaId) {
-        VehiclePropValue propValue = new VehiclePropValue();
-        propValue.prop = propId;
-        propValue.areaId = areaId;
-        return propValue;
+                        + "floatValues: %s, int32Values: %s, int64Values: %s, bytes: %s, string: "
+                        + "%s\n",
+                value.getPropId(), value.getStatus(), value.getTimestamp(), value.getAreaId(),
+                value.dumpFloatValues(), value.dumpInt32Values(), value.dumpInt64Values(),
+                bytesString, value.getStringValue());
     }
 
     private static String toCarPropertyLog(int propId) {
@@ -992,6 +1132,7 @@ public class VehicleHal extends IVehicleCallback.Stub {
                 VehiclePropertyIds.toString(propId));
     }
 
+    @ExcludeFromCodeCoverageGeneratedReport(reason = BOILERPLATE_CODE)
     private static String toCarAreaLog(int areaId) {
         return String.format("areaId: %d // 0x%x", areaId, areaId);
     }
